; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_notes.c_git_note_commit_iterator_new.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_notes.c_git_note_commit_iterator_new.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_note_commit_iterator_new(i32** %0, i32* %1) #0 {
  %3 = alloca i32**, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  store i32** %0, i32*** %3, align 8
  store i32* %1, i32** %4, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = call i32 @git_commit_tree(i32** %6, i32* %7)
  store i32 %8, i32* %5, align 4
  %9 = icmp slt i32 %8, 0
  br i1 %9, label %10, label %11

10:                                               ; preds = %2
  br label %21

11:                                               ; preds = %2
  %12 = load i32**, i32*** %3, align 8
  %13 = load i32*, i32** %6, align 8
  %14 = call i32 @git_iterator_for_tree(i32** %12, i32* %13, i32* null)
  store i32 %14, i32* %5, align 4
  %15 = icmp slt i32 %14, 0
  br i1 %15, label %16, label %20

16:                                               ; preds = %11
  %17 = load i32**, i32*** %3, align 8
  %18 = load i32*, i32** %17, align 8
  %19 = call i32 @git_iterator_free(i32* %18)
  br label %20

20:                                               ; preds = %16, %11
  br label %21

21:                                               ; preds = %20, %10
  %22 = load i32*, i32** %6, align 8
  %23 = call i32 @git_tree_free(i32* %22)
  %24 = load i32, i32* %5, align 4
  ret i32 %24
}

declare dso_local i32 @git_commit_tree(i32**, i32*) #1

declare dso_local i32 @git_iterator_for_tree(i32**, i32*, i32*) #1

declare dso_local i32 @git_iterator_free(i32*) #1

declare dso_local i32 @git_tree_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
